tests/test-files/recursive-let.txt
================================================================================
100 recursively-construct-via-non-constructor-function
================================================================================

(package coalton-unit-tests/recursive-let)

(declare flipped-cons (List :elt * :elt -> List :elt))
(define (flipped-cons list new-head)
  (Cons new-head list))
(declare make-loop (:elt -> List :elt))
(coalton:define (make-loop elt)
  (coalton:let ((loop (flipped-cons loop elt))) loop))

--------------------------------------------------------------------------------

error: Invalid recursive bindings
  --> test:8:17
   |
 8 |    (coalton:let ((loop (flipped-cons loop elt))) loop))
   |                   ^^^^ invalid recursive variable bindings

================================================================================
101 recursively-construct-bad-repr-types
================================================================================

(package coalton-unit-tests/recursive-let)

(repr :transparent)
(define-type (MyLoop :elt) (MyLoop (MyLoop :elt)))
(declare make-loop (Void -> (MyLoop :any)))
(define (make-loop)
  (let ((loop (MyLoop loop))) loop))

--------------------------------------------------------------------------------

error: Invalid recursive bindings
  --> test:7:9
   |
 7 |    (let ((loop (MyLoop loop))) loop))
   |           ^^^^ invalid recursive variable bindings

================================================================================
102 recursively-construct-bad-repr-types
================================================================================

(package coalton-unit-tests/recursive-let)

(repr :native (cl:or cl:null mynullableloop))
(define-type (MyNullableLoop :elt)
  (NonNull :elt)
  (MyLoop (MyNullableLoop :elt)))
(declare make-loop (Void -> (MyNullableLoop :any)))
(define (make-loop)
  (let ((lp (MyLoop lp)))
    lp)))

--------------------------------------------------------------------------------

error: Invalid recursive bindings
  --> test:9:9
   |
 9 |    (let ((lp (MyLoop lp)))
   |           ^^ invalid recursive variable bindings

================================================================================
103 recursive-partial-constructor-application
================================================================================

(package coalton-unit-tests/recursive-let)

(define-type (PairedLoop :elt)
  (PairedLoop (:elt coalton:-> (PairedLoop :elt)) :elt))
(declare make-partial-loop (Void -> :elt -> (PairedLoop :elt)))
(define (make-partial-loop)
  (let ((lp (PairedLoop lp))) lp))

--------------------------------------------------------------------------------

error: Invalid recursive bindings
  --> test:7:9
   |
 7 |    (let ((lp (PairedLoop lp))) lp))
   |           ^^ invalid recursive variable bindings

================================================================================
104 recursive-indirect-constructor-application
================================================================================

(package coalton-unit-tests/recursive-let)

(define-type (MyLoop :elt) (MyLoop (MyLoop :elt)))
(declare make-circular-list-with-deranged-shadowing (:elt -> (List :elt)))
(define (make-circular-list-with-deranged-shadowing elt)
  (let ((MyLoop Cons))
    (let ((lp (MyLoop elt lp)))
      lp)))

--------------------------------------------------------------------------------

error: Invalid recursive bindings
  --> test:7:11
   |
 7 |      (let ((lp (MyLoop elt lp)))
   |             ^^ invalid recursive variable bindings

================================================================================
105 mutually-recursive-data-and-function
================================================================================

(package coalton-unit-tests/recursive-let)

(define-type LoopFn
  (LoopFn (Void -> LoopFn)))
(declare make-loop-fn (Void -> LoopFn))
  (define (make-loop-fn)
    (let ((lp (LoopFn func))
                (func (fn () lp)))
      lp)))

--------------------------------------------------------------------------------

error: Invalid recursive bindings
  --> test:8:17
   |
 7 |      (let ((lp (LoopFn func))
   |             -- with definition
 8 |                  (func (fn () lp)))
   |                   ^^^^ function can not be defined recursively with variables

================================================================================
106 rec requires direct tail calls
================================================================================

(package coalton-unit-tests/recursive-let)

(define (bad n)
  (rec go ((i 0))
    (if (>= i n)
        i
        (+ 1 (go (+ i 1))))))

--------------------------------------------------------------------------------

error: Invalid rec
  --> test:7:14
   |
 4 |    (rec go ((i 0))
   |         -- `rec` binds go here
 5 |      (if (>= i n)
 6 |          i
 7 |          (+ 1 (go (+ i 1))))))
   |                ^^ this use of recursive operator go is not a direct tail call
help: Use `let` + `fn` instead if you need non-tail recursion or want to pass the recursive function around.
 7 |         (+ 1 (go (+ i 1))))))
   |               --

================================================================================
107 rec operator cannot escape as a value
================================================================================

(package coalton-unit-tests/recursive-let)

(define (bad n)
  (rec go ((i 0))
    (let ((f go))
      (if (>= i n)
          i
          (f (+ i 1))))))

--------------------------------------------------------------------------------

error: Invalid rec
  --> test:5:13
   |
 4 |    (rec go ((i 0))
   |         -- `rec` binds go here
 5 |      (let ((f go))
   |               ^^ this use of recursive operator go is not a direct tail call
help: Use `let` + `fn` instead if you need non-tail recursion or want to pass the recursive function around.
 5 |     (let ((f go))
   |              --
